<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="addMovieViewModel"
            type="com.android.graphqlcmbnesample.presentation.addtvshows.AddTvShowsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.CombyneMainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <EditText
            android:id="@+id/tv_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/tv_show"
            android:layout_marginTop="@dimen/marginr_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/tv_releasedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:cursorVisible="false"
            android:layout_marginTop="@dimen/marginr_10"
            android:hint="@string/release_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tvshow"
            android:inputType="text"
            android:focusable="false"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/tv_seasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="@dimen/marginr_10"
            android:hint="@string/seasons"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_releasedate"
            android:inputType="number"
            android:importantForAutofill="no" />



        <Button
            android:id="@+id/bt_add_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_tv_show"
            android:layout_marginTop="@dimen/marginr_25"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{()->addMovieViewModel.onSaveButtonClicked()}"
            app:layout_constraintTop_toBottomOf="@id/tv_seasons" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_releasedate"
            android:visibility="@{addMovieViewModel.isLoad()?View.GONE:View.VISIBLE}" />

        <TextView
            android:id="@+id/no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/marginr_50"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_add_movies"
            android:textSize="@dimen/marginr_18sp"
            android:text="@string/no_network_connection"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textinput_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/marginr_10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_network"
            android:textSize="@dimen/marginr_18sp"
            android:gravity="center"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry"
            android:layout_width="@dimen/material_button_width"
            android:layout_height="@dimen/marginr_50"
            app:cornerRadius="@dimen/marginr_6"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/marginr_10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textinput_error"
            android:gravity="center"
            android:visibility="gone"
            android:onClick="@{()->addMovieViewModel.onButtonRetryClicked()}"
            android:text="@string/str_retry">
        </com.google.android.material.button.MaterialButton>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
